<resources>
    <string name="app_name">Timetable</string>
    <string name="error">Error</string>
    <string name="error_connecting">Failed connect</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="save">Save</string>
    <string name="empty">Empty</string>
    <string name="open_nav_drawer">Open navigation drawer</string>
    <string name="close_nav_drawer">Close navigation drawer</string>
    <string name="registration">Registration</string>
    <string name="faculty">Faculty</string>
    <string name="occupation">Occupation</string>
    <string name="group">Group</string>
    <string name="subgroup">Subgroup</string>
    <string name="create_subscription">Create subscription</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter Password</string>
    <string name="incorrect_email">Incorrect email</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="monday">Monday</string>
    <string name="choose_faculty">Choose faculty</string>
    <string name="choose_occupation">Choose occupation</string>
    <string name="choose_group">Choose gpoup</string>
    <string name="choose_subgroup">Choose subgroup</string>
    <string name="do_you_want_to_create_a_subscription">Do you want to create a subscription?</string>
    <string name="go_to_numerator">Go to numerator</string>
    <string name="go_to_denominator">Go to denominator</string>
    <string name="main">Main</string>
    <string name="secondary">Secondary</string>
    <string name="numerator">Numerator</string>
    <string name="denominator">Denominator</string>
    <string name="classroom_with_parameter">Classroom: %1$s</string>
    <string name="lecture">Lecture</string>
    <string name="practical_class">Practical class</string>
    <string name="class_number_with_parameter">%1$d class</string>
    <string name="class_time_with_parameters" translatable="false">%1$s - %2$s</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="lecturer_full_name" translatable="false">%1$s %2$s %3$s</string>
    <string name="create_main_subscription">Create main subscription</string>
    <string name="create_secondary_subscription">Create secondary subscription</string>
    <string name="not_authenticated">You are not authenticated</string>
    <string name="unknown_failure">Unknown failure</string>

    <string name="auto_start_message">You must add the application to autorun in order for you to receive notifications on time. Continue?</string>
    <string name="battery_optimization_message">For the application to work correctly, you must turn off the power saving mode.</string>
    <string name="notification_message">For the application to work correctly, you need to configure notification settings.</string>
    <string name="default_notification_channel_id">kubsu_timetable_channel_id</string>
    <string name="default_notification_channel_name">kubsu_timetable_channel_name</string>
    <string name="account_is_blocked">Account is blocked</string>
    <string name="incorrect_emai_or_password">Incorrect email or password</string>
    <string name="invalid_email">Invalid email</string>
    <string name="password_is_too_common">Password is too common</string>
    <string name="password_entirely_numeric">Password entirely numeric</string>
    <string name="password_is_too_short">Password is too short</string>
    <string name="non_unique_email">A user with this email already exists</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="timetable">Timetable</string>
    <string name="settings">Settings</string>
    <string name="not_selected">Not selected</string>
    <string name="required">Obligatory field</string>
    <string name="title_too_long">Title is too long</string>
    <string name="subscription_already_exists">Subscription already exists</string>
    <string name="subscription_title">Subscription title</string>
    <string name="notifications">Notifications</string>
    <string name="delete_subscription">Delete subscription</string>
    <string name="logout">Logout</string>
    <string name="dark_theme">Dark theme</string>
    <string name="create_account">Create account</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="are_you_sure_you_want_to_unsubscribe">Are you sure you want to unsubscribe?</string>

    <string-array name="day_of_week">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string name="list_is_empty">List is empty</string>
    <string name="check_new_timetable">Update came, check!</string>
    <string name="show_timetable_for_next_week">Show timetable for next  week</string>
    <string name="process_may_take_some_time">The process may take some time. Please do not close the application.</string>
    <string name="repeat_password">Repeat password</string>
    <string name="passwords_vary">Passwords vary</string>
    <string name="edit_profile">Edit profile</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="сlick_again_to_close">Click again to close</string>
    <string name="numerator_subtitle">Numerator, %1$s week</string>
    <string name="denominator_subtitle">Denominator, %1$s week</string>
    <string name="attention">Attention!</string>
    <string name="warning_before_validation">Before you confirm, make sure that you have a sufficient percentage of charge and the Internet connection is stable.</string>
    <string name="cache_invalidation">Cache invalidation</string>
</resources>
